# chatbot-tester

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  BACKLOG.md  CLAUDE.md  DECISIONS.md  Dockerfile  LICENSE  PRD.md  QUICKSTART.txt  README.md  action.yml  add_normalized_timing.py  analyze_chatbot.py  auth_state.json  calculate_time_savings.py  chatbot-tester.spec  fix_missing_screenshots.py  fix_timing_column_order.py  fly.toml  install.sh  pyproject.toml  requirements.txt  run.py  run_parallel_tests.py  save_auth.py  save_auth_silicon.py  test_langsmith_report.py  trigger_circleci.py  uninstall.sh  update.sh
.circleci/: config.yml
.github/workflows/: build-release.yml  chatbot-test.yml  code-review.yml  scheduled-tests.yml
adapters/: __init__.py  auto_detect.py  base.py  click_learn.py
config/: .env.example  .env.template  settings.yaml
docs/: CONFIGURATION.md  DEPLOYMENT.md  NEW_PROJECT.md  QUICKSTART.md  README.md  SETUP.md  TROUBLESHOOTING.md
knowledge/: failure_patterns.yaml
locales/: en.yaml  it.yaml
mcp_server/: Dockerfile  README.md  __init__.py  auth.py  fly.toml  requirements.txt  server.py  tools.py
projects/efg-intranet/: project.yaml  run_config.json  tests.json  training_data.json
projects/example-chatbot/: project.yaml  tests.json
projects/silicon-a/: project.yaml  run_config.json  tests.json  training_data.json
projects/silicon-b/: project.yaml  run_config.json  tests.json  tests_ggp.json  training_data.json
projects/silicon-prod/: project.yaml  run_config.json  training_data.json
scripts/: check-sensitive-patterns.sh  cleanup_run.py  deduplicate_run.py  fix_remaining_screenshots.py  sync-to-public.sh
src/: __init__.py  analyzer.py  auth.py  baselines.py  browser.py  cache.py  calibration.py  circleci_client.py  cleanup.py  cli.py  cli_utils.py  comparison.py  config_loader.py  dashboard.py  diagnostic.py  evaluation.py  export.py  finetuning.py  github_actions.py  health.py  i18n.py  langsmith_client.py  nl_agent.py  nl_chat.py  nl_confirmation.py  nl_executor.py  nl_memory.py  nl_planner.py  nl_processor.py  notifications.py  ollama_client.py  parallel.py  performance.py  prompt_manager.py  report_local.py  scheduler.py  sheets_client.py  test_importer.py  tester.py  training.py  (+2 more)
src/clients/: __init__.py  base.py  langsmith_setup.py  (+2 more)
templates/: project.yaml.template  report.html  tests.json.template
tests/: test_cli.py  test_clients.py  test_e2e.py  test_export.py  test_importer.py  test_integration.py  test_notifications.py  test_parsing.py  test_settings.py  test_smoke.py  test_unit_export.py
wizard/: __init__.py  app.py  main.py  styles.tcss  utils.py
(+41 files in other folders)
